--- a/config/database.yml
+++ b/config/database.yml
@@ -23,11 +23,7 @@ default: &default
 
 development:
   <<: *default
-  host: baasu.db.elephantsql.com
-  database: wimkajwf
-  username: wimkajwf
-  password: ipSZEA9Q2N3m55rRDiq7ZO0DGwsgK2jr
-  port: 5432
+  database: bikeapp_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
